# OpsPilot

./: .dockerignore  .gitignore  Dockerfile  PROJECT.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/api/v1/endpoints/: approvals.py  chat.py  conversations.py  documents.py  evals.py  health.py  observability.py  tools.py  traces.py
app/core/: config.py  security.py  storage.py
app/graphql/: schema.py
app/repositories/: __init__.py  memory.py  postgres.py
app/schemas/: approvals.py  chat.py  documents.py  evals.py  jobs.py  observability.py  tools.py
app/services/: approvals.py  document_store.py  embeddings.py  evals.py  generation.py  github_ingestion.py  ingestion.py  jobs.py  llm.py  retrieval.py  tools.py  workflow.py
app/web/: demo.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: graphql.ts
tests/: conftest.py  test_approvals.py  test_chat.py  test_conversations.py  test_demo.py  test_documents.py  test_evals.py  test_graphql.py  test_observability.py  test_read_endpoints.py  test_security.py  test_storage.py  test_tools.py
